add media queries

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="resume-body">
     <!-- EDUCATION CERTS AND DISTINCTIONS -->
     <div class="edu">
-        <h2 onclick="dropdown('edu-drop')">Education, Certificates, and Distinctions [+]</h2>
+        <h2 onclick="dropdown('edu-drop')">Education and Distinctions [+]</h2>
         <div class="dropdown" id="edu-drop">
             <ul>
                 <li>
