add codewars img

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     </ul>
                 </li>
                 <li>
-                    <p class="mini-header">Codewars.com</p>
+                    <p class="mini-header">Codewars.com <img src="https://www.codewars.com/users/abstractsins/badges/micro" /></p>
                     <ul>
                         <li>Level: <code>5 kyu;</code></li>
                         <li>Honor: <code>464;</code></li>
