update honor in index.html this time

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <!-- DOWNLOAD -->
     <div class="download">
-        <a href="DJB development resume 12-28-21.pdf" target="new"><button id="pdf">Download PDF</button></a>
+        <a href="DJB-development-resume.pdf" target="new"><button id="pdf">Download PDF</button></a>
     </div>
     
     <div class="resume-body">
@@ -58,10 +58,10 @@
                 <li>
                     <p class="mini-header">Codewars.com <img src="https://www.codewars.com/users/abstractsins/badges/micro" /></p>
                     <ul>
-                        <li>Level: <code>5 kyu;</code></li>
-                        <li>Honor: <code>500;</code></li>
-                        <li>Honor Percentile: <code>top 17.100%;</code></li>
-                        <li>Total Completed Kata: <code>142;</code></li>
+                        <li>Level: <code>4 kyu;</code></li>
+                        <li>Honor: <code>700;</code></li>
+                        <li>Honor Percentile: <code>top 9.793%;</code></li>
+                        <li>Total Completed Kata: <code>174;</code></li>
                     </ul>
                 </li>
             </ul>
