add express servers

--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
                     <p class="mini-header">Codewars.com <img src="https://www.codewars.com/users/abstractsins/badges/micro" /></p>
                     <ul>
                         <li>Level: <code>4 kyu;</code></li>
-                        <li>Honor: <code>1000;</code></li>
-                        <li>Honor Percentile: <code>top 5.131%;</code></li>
-                        <li>Total Completed Kata: <code>249;</code></li>
+                        <li>Honor: <code>1143;</code></li>
+                        <li>Honor Percentile: <code>top 4.019%;</code></li>
+                        <li>Total Completed Kata: <code>298;</code></li>
                     </ul>
                 </li>
             </ul>
@@ -73,7 +73,8 @@
         <h2 onclick="dropdown('skills-drop')">Skills</h2>
         <div class="dropdown" id="skills-drop">
             <ul>
-                <li>JavaScript, JQuery, CSS, HTML, Phaser.js</li>
+                <li>JavaScript, JQuery, Phaser.js, Express servers</li>
+                <li>HTML, CSS</li>
                 <li>Photoshop and the Adobe Creative Suite</li>
                 <li>Microsoft Excel and other Office Applications</li>
                 <li>World Cuisine and Recipe Development</li>
