html update with Express

--- a/index.html
+++ b/index.html
@@ -44,9 +44,10 @@
                 <li>
                     <p class="mini-header">Codecademy</p>
                     <ul>
-                        <li><em>21 Certificates, including:</em>
+                        <li><em>22 Certificates, including:</em>
                         <ul>
                             <li><code>Intermediate JavaScript;</code></li>
+                            <li><code>Express Servers;</code></li>
                             <li><code>Intermediate CSS;</code></li>
                             <li><code>Video Games with Phaser.js;</code></li>
                             <li><code>Node.js;</code></li>
@@ -59,9 +60,9 @@
                     <p class="mini-header">Codewars.com <img src="https://www.codewars.com/users/abstractsins/badges/micro" /></p>
                     <ul>
                         <li>Level: <code>4 kyu;</code></li>
-                        <li>Honor: <code>1143;</code></li>
-                        <li>Honor Percentile: <code>top 4.019%;</code></li>
-                        <li>Total Completed Kata: <code>298;</code></li>
+                        <li>Honor: <code>1219;</code></li>
+                        <li>Honor Percentile: <code>top 3.564%;</code></li>
+                        <li>Total Completed Kata: <code>325;</code></li>
                     </ul>
                 </li>
             </ul>
