--- a/index.html
+++ b/index.html
@@ -44,9 +44,10 @@
                 <li>
                     <p class="mini-header">Codecademy</p>
                     <ul>
-                        <li><em>22 Certificates, including:</em>
+                        <li><em>23 Certificates, including:</em>
                         <ul>
                             <li><code>Intermediate JavaScript;</code></li>
+                            <li><code>TypeScript;</code></li>
                             <li><code>Express Servers;</code></li>
                             <li><code>Intermediate CSS;</code></li>
                             <li><code>Video Games with Phaser.js;</code></li>
@@ -60,9 +61,9 @@
                     <p class="mini-header">Codewars.com <img src="https://www.codewars.com/users/abstractsins/badges/micro" /></p>
                     <ul>
                         <li>Level: <code>4 kyu;</code></li>
-                        <li>Honor: <code>1219;</code></li>
-                        <li>Honor Percentile: <code>top 3.564%;</code></li>
-                        <li>Total Completed Kata: <code>325;</code></li>
+                        <li>Honor: <code>1316;</code></li>
+                        <li>Honor Percentile: <code>top 3.066%;</code></li>
+                        <li>Total Completed Kata: <code>353;</code></li>
                     </ul>
                 </li>
             </ul>
@@ -74,7 +75,7 @@
         <h2 onclick="dropdown('skills-drop')">Skills</h2>
         <div class="dropdown" id="skills-drop">
             <ul>
-                <li>JavaScript, JQuery, Phaser.js, Express servers</li>
+                <li>JavaScript, TypeScript, JQuery, Phaser.js, Express servers</li>
                 <li>HTML, CSS</li>
                 <li>Photoshop and the Adobe Creative Suite</li>
                 <li>Microsoft Excel and other Office Applications</li>
