--- a/index.html
+++ b/index.html
@@ -42,6 +42,12 @@
                     </ul>
                 </li>
                 <li>
+                    <p class="mini-header">W3Schools Certification</p>
+                    <ul>
+                        <li><code>Certified JavaScript Developer</code></li>
+                    </ul>
+                </li>
+                <li>
                     <p class="mini-header">Codecademy</p>
                     <ul>
                         <li><em>23 Certificates, including:</em>
@@ -61,9 +67,9 @@
                     <p class="mini-header">Codewars.com <img src="https://www.codewars.com/users/abstractsins/badges/micro" /></p>
                     <ul>
                         <li>Level: <code>4 kyu;</code></li>
-                        <li>Honor: <code>1316;</code></li>
-                        <li>Honor Percentile: <code>top 3.066%;</code></li>
-                        <li>Total Completed Kata: <code>353;</code></li>
+                        <li>Honor: <code>1374;</code></li>
+                        <li>Honor Percentile: <code>top 2.819%;</code></li>
+                        <li>Total Completed Kata: <code>360;</code></li>
                     </ul>
                 </li>
             </ul>
