added api functionality to codewars section

--- a/index.html
+++ b/index.html
@@ -66,10 +66,17 @@
                 <li>
                     <p class="mini-header">Codewars.com <img src="https://www.codewars.com/users/abstractsins/badges/micro" /></p>
                     <ul>
-                        <li>Level: <code>4 kyu;</code></li>
-                        <li>Honor: <code>1374;</code></li>
                         <li>Honor Percentile: <code>top 2.819%;</code></li>
-                        <li>Total Completed Kata: <code>360;</code></li>
+
+                        <div class="api">
+                            <div class="api-block one" id="honor"><h3 class="api-header">Honor:</h3></div>
+                            <div class="api-block two" id="rank"><h3 class="api-header">Rank:</h3></div>
+                            <div class="api-block three" id="score"><h3 class="api-header">Score:</h3></div>
+                            <div class="api-block four" id="completed"><h3 class="api-header">Completed:</h3></div>
+                            <div class="api-block five" id="languages"><h3 class="api-header">Languages Trained:</h3></div>
+                            <aside class="api-caption">Information provided through the Codewars API</caption>
+                        </div>
+
                     </ul>
                 </li>
             </ul>
