update for Procensis

--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bakbak+One&family=Coda:wght@400;800&family=Heebo:wght@100;200;300;400;500;600;700;800;900&family=Racing+Sans+One&family=Righteous&family=Spectral:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet"><body>
+    
+    <!-- TITLE -->
     <title>Resume | Daniel Berlin</title>
+
 </head>
 
 <body>
